# st.template

./: .gitignore  README.md  pyproject.toml
.streamlit/: secrets.toml
src/: app.py
src/sttemplate/: __init__.py  app.py
tests/: calc.py  checks.sh  mypy.ini  pls.py  test_calc.py
tests/logs/: test_results_2024-12-31_17-43-40.md  test_results_2024-12-31_17-45-14.md  test_results_2024-12-31_17-46-00.md
