[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sttemplate"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
]

[tool.hatch.build]
include = [
    "src/**/*.py",
]
exclude = [
    "tests/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sttemplate"]


[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "LICENSE",
]

[tool.hatch.version]
path = "src/sttemplate/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
